fix: spacing in intro section buttons too far down

--- a/scss/intro.module.scss
+++ b/scss/intro.module.scss
@@ -1,31 +1,6 @@
 @use "./queries.scss";
 @import "./queries.scss";
 
-// .imageWrapper {
-//   position: relative;
-//   display: inline-block;
-//   border-radius: 1rem;
-// }
-
-// .imageWrapper::before {
-//   content: "";
-//   inset: -20px;
-//   border: 3px solid palevioletred;
-//   border-radius: 1rem;
-//   background-image: url("/selfie2.png");
-//   background-size: cover;
-//   background-position: center;
-//   filter: blur(5px);
-//   position: absolute;
-//   z-index: 0;
-// }
-
-// .image {
-//   z-index: 1;
-
-//   position: relative;
-// }
-
 .sectionContainer {
   // margin-bottom: 100rem;
   // scroll-margin-top: 100rem;
@@ -36,12 +11,12 @@
 }
 
 .sliderAnimationContainer {
-  max-height: 70rem;
-  margin-bottom: 5rem;
+  // max-height: 100vh;
+  // margin-bottom: 5rem;
 
   @include from-small-up {
-    max-height: 8rem;
-    margin-bottom: 70rem;
+    max-height: 150vh;
+    // margin-bottom: 70rem;
   }
 }
 
