--- a/scss/slider-animation.module.scss
+++ b/scss/slider-animation.module.scss
@@ -2,7 +2,7 @@
 @import "./queries.scss";
 
 .main {
-  margin-bottom: 100vh;
+  // margin-bottom: 100vh;
   height: 100vh;
   width: 90vw;
   position: relative;
